Fixed overflow on main canvas

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -35,12 +35,13 @@ textarea{
 }
 #Gamemain {
   height: 90%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #Maincanvas{
   object-fit: scale-down;
   display: inline-block;
+  overflow: auto;
 }
 #Map{
   background-repeat: no-repeat;
@@ -49,6 +50,8 @@ textarea{
 #Gameinfo {
   height: 2em;
   overflow: hidden;
+  float: right;
+  z-index: 5;
 }
 #Navbar {
   background-color: Silver;
